kubernetes/base/service-celery.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentic-crm-celery
  namespace: default
spec:
  selector:
    app: celery
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
